Fix level up table on smaller screens

--- a/src/app/ui/ui-card/level-up/level-up.component.scss
+++ b/src/app/ui/ui-card/level-up/level-up.component.scss
@@ -6,16 +6,7 @@ h4 {
   border-collapse: collapse;
   width: 80%;
 
-  td {
-    border: 1px solid grey;
-    padding: 8px;
-  }
-
   td:last-child {
     text-align: center;
-  }
-
-  tr:nth-child(even) {
-    background-color: #f2f2f2;
   }
 }
